// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> renders correctly 1`] = `
<div>
  <div
    class="css-18ws1q3"
  >
    <h2
      class="chakra-text css-0"
    >
      Woof Woof Gallery
    </h2>
    <h3
      class="chakra-text css-o5g2qp"
    >
      Already know the bread?
    </h3>
    <h4
      class="chakra-text css-0"
    >
      Search for it
    </h4>
    <div
      class="chakra-input__group css-4302v8"
    >
      <input
        class="chakra-input css-0"
        placeholder="Germanshepherd.."
        value="test"
      />
      <div
        class="chakra-input__right-element css-dp9r5f"
      >
        <svg
          class="chakra-icon css-u1i02k"
          data-testid="clearInput"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> renders correctly with empty value 1`] = `
<div>
  <div
    class="css-18ws1q3"
  >
    <h2
      class="chakra-text css-0"
    >
      Woof Woof Gallery
    </h2>
    <h3
      class="chakra-text css-o5g2qp"
    >
      Already know the bread?
    </h3>
    <h4
      class="chakra-text css-0"
    >
      Search for it
    </h4>
    <div
      class="chakra-input__group css-4302v8"
    >
      <input
        class="chakra-input css-0"
        placeholder="Germanshepherd.."
        value=""
      />
    </div>
  </div>
</div>
`;
